@@ -215,6 +215,7 @@ OTHERS
     o	The progress bar in download.file() is now supressed by
     	quiet=TRUE (as it has long been on Unix).
 
+
 BUILDING R
 
     o	Support for the ACML BLAS has been withdrawn (there is no
@@ -238,6 +239,11 @@ BUG FIXES
 
     o	If windows(ypinch=) was specified, the width value was used
 	for the height.
+
+    o	The Graphapp computation for keyboard accelerators for menus was
+	not always working, at least on Windows XP -- this affected
+	e.g. Alt-M plus 'i' for 'List search path', where 's' was
+	being underlined.  (PR#11036)
 
 
 
